--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>&lt;my-element> Demo</title>
 
     <script type="module" src="./node_modules/tpe2-material/tpe-material.js"></script>
+    <!-- <script type="module" src="./node_modules/tpe2/tpe.js"></script>   -->
 
     <!--
     <script type="module" src="./node_modules/tpe2/tpe-classes.js"></script>
