--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="utf-8" />
     <title>&lt;my-element> Demo</title>
 
-    <script type="module" src="./node_modules/tpe2-material/tpe-material.js"></script>
-    <!-- <script type="module" src="./node_modules/tpe2/tpe.js"></script>   -->
+    <script type="module" src="./node_modules/tpe-material/tpe-material.js"></script>
+    <!-- <script type="module" src="./node_modules/tpe/tpe.js"></script>   -->
 
     <!--
-    <script type="module" src="./node_modules/tpe2/tpe-classes.js"></script>
-    <script type="module" src="./node_modules/tpe2-material/elements/nn-textarea.js"></script>
-    <script type="module" src="./node_modules/tpe2/tpe-define.js"></script>
+    <script type="module" src="./node_modules/tpe/tpe-classes.js"></script>
+    <script type="module" src="./node_modules/tpe-material/elements/nn-textarea.js"></script>
+    <script type="module" src="./node_modules/tpe/tpe-define.js"></script>
 -->
 
     <!--
     <script type="module">
-      import './node_modules/tpe2/tpe-classes.js'
-      import './node_modules/tpe2-material/elements/nn-textarea.js'
-      import './node_modules/tpe2/tpe-define.js'
+      import './node_modules/tpe/tpe-classes.js'
+      import './node_modules/tpe-material/elements/nn-textarea.js'
+      import './node_modules/tpe/tpe-define.js'
     </script>
 -->
 
